# Algoritmos1

./: .gitignore
Clases/Invariantes/: CMakeLists.txt  main.cpp
Clases/Latex/: Ejercicio1.tex
Clases/SortingYSearching/: CMakeLists.txt  main.cpp
Clases/SortingYSearching/src/: ejercicios.cpp  ejercicios.h
Clases/SortingYSearching/tests/: contieneElementos.cpp  dameBache.cpp  dameBache1.cpp  maximoRotadas.cpp  naipesFaltantes.cpp  perteneceRotadas.cpp
Clases/Vectores/: CMakeLists.txt  Especificaciones.aux  Especificaciones.fdb_latexmk  Especificaciones.fls  Especificaciones.tex  common_utils.cpp  common_utils.h  ejercicios.cpp  main.cpp
TP - Especificación/: Algo1Macros.tex  solucion.aux  solucion.fdb_latexmk  solucion.fls  solucion.tex
TP - Especificación/: solucion.fls
TPI/juegoDeLaVida/: CMakeLists.txt  es.cpp  juegoDeLaVida  solucion.cpp  toroidUtils.cpp  toroidUtils.h  vectorUtils.cpp  vectorUtils.h
TPI/juegoDeLaVida/tests/: enCrecimientoTEST.cpp  esPeriodicoTEST.cpp  esValidoTEST.cpp  evolucionDePosicionTEST.cpp  evolucionToroideTEST.cpp  posicionesVivasTEST.cpp  primosLejanosTEST.cpp  seleccionNaturalTEST.cpp  soloBloquesTEST.cpp  vistaTrasladadaTEST.cpp
TPI/juegoDeLaVida/tests/ours/: enCrecimientoTEST.cpp  esPeriodicoTEST.cpp  esValidoTEST.cpp  primosLejanosTEST.cpp  seleccionNaturalTEST.cpp  soloBloquesTEST.cpp  vistaTrasladadaTEST.cpp
TPI/juegoDeLaVida/utils/: toroidUtils.cpp  toroidUtils.h  vectorUtils.h
TPI/salida/: coverage.info
TPI/salida/cobertura/: index-sort-f.html  index-sort-l.html  index.html
(+150 files in other folders)
